avoid big images to overlap

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -121,6 +121,8 @@ main {
 	margin-right: 280px;
 }
 
+#contenu img { max-width:100%; }
+
 #sidebar {
 	float: right;
 	padding: 10px;
